# rust_by_example

./: Cargo.toml
src/: lib.rs  mobile.rs  web.rs
